--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1 class="index-h1">KAZEOVER</h1>
                 <nav class="navegacion-superior-index">
                     <ul>
-                        <li><a href="Index.html">Inicio</a></li>
+                        <li><a href="index.html">Inicio</a></li>
                         <li><a href="./pages/hombre.html">Hombre</a></li>
                         <li><a href="./pages/mujer.html">Mujer</a></li>
                         <li><a href="./pages/iniciarsesion.html">Iniciar sesion</a></li>
