Se hace cambio de footer

--- a/index.html
+++ b/index.html
@@ -58,17 +58,7 @@
                     </div>
                 </nav>
 
-                <!-- 
-                <nav class="navegacion-superior-index">
-                    <ul>
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="./pages/hombre.html">Hombre</a></li>
-                        <li><a href="./pages/mujer.html">Mujer</a></li>
-                        <li><a href="./pages/iniciarsesion.html">Iniciar sesion</a></li>
-                        <li><a href="./pages/buscar.html">Buscar</a></li>
-                        <li><a href="./pages/carrito.html">Carrito</a></li>
-                    </ul>
-                </nav> -->
+
 
 
 
@@ -88,25 +78,35 @@
 
     <main class="index-main py-3">
         <h2 class="nuestrasremeras-index-h2">Nuestras remeras</h2>
-
+        
         <div class="ultimos-oversize-contenedor">
-
             <section class="remeraindex">
-                <img src="./img/Negro.jpeg" alt="remeranegra">
-                <h3 class="mt-2">DRACULA</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias minima
-                    incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                <p>USD</p>
-                <button class="btn-remera-index">COMPRAR</button>
+                <div><img src="./img/Negro.jpeg" alt="remeranegra"></div>
+                <div>
+                    <h3 class="mt-2">DRACULA</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
+                        minima
+                        incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
+                    <p>USD</p>
+                    <button class="btn-remera-index">COMPRAR</button>
+                </div>
+
+
+                <div>
+                    <img src="./img/Negro.jpeg" alt="remeranegra">
+                    <div>
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
+                            minima
+                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
+                        <p>USD</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+
             </section>
 
             <section class="remeraindex">
-                <img src="./img/Negro.jpeg" alt="remeranegra">
-                <h3 class="mt-2">DRACULA</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias minima
-                    incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                <p>USD</p>
-                <button class="btn-remera-index">COMPRAR</button>
             </section>
 
             <section class="remeraindex">
@@ -160,31 +160,46 @@
 
     </main>
 
+    <footer class="footerindex text-start">
 
-    <footer class="footerindex py-3">
-        <div class="linea-index-footer"></div>
-        <div class="falso-index-footer">
-            <div class="columna-index-footer">
-                <h2>Resources</h2>
-            </div>
-            <div class="columna-index-footer">
-                <h2>Help</h2>
-            </div>
-
-            <div class="columna-index-footer">
-                <h2>Company</h2>
-
+        <div class="footer-conteiner-grid ps-4">
+            <div class="div1">
+                <ul class="footerindex d-flex flex-column align-items-stretch">
+                    <li>Ayuda</li>
+                    <li>Mi cuenta</li>
+                    <li>Store Locator</li>
+                </ul>
             </div>
 
-            <div class="columna-index-footer"></div>
-            <h2>Promotions and Discount</h2>
+            <div class="div2">
 
-            <div class="columna-index-footer"></div>
-            <h2>Argentina</h2>
+            </div>
+            <div class="div3">Store Locator </div>
+            <div class="div4">Gift Card</div>
         </div>
+
+        <div class="footer-redessociales d-flex">
+            <div>
+                <div class="d-flex flex-column">
+                    <ul class="d-flex">
+                        <li>Copyright © UNIQLO Co., Ltd. All rights reserved.</li>
+                    </ul>
+                    <div class="d-flex ">
+                        <ul class="d-flex footer-ul flex-row align-items-start">
+                            <li> <a href=""><img src="./img/logo faceboock.png" alt="FACEBOOCK"></a></li>
+                            <li> <a href=""><img src="./img/Logo instagram.png" alt="Instagram"></a></li>
+                            <li> <a href=""><img src="./img/youtube_social_icon_dark.png" alt=""></a></li>
+                            <li> <a href=""> <img src="./img/tiktok.png" alt="Tiktok"></a></li>
+                        </ul>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
     </footer>
-
-
 
 
 
