Se hace modificaciones de la pagina hombres y mujeres. Se empieza a utilizar Bootstrap y se empieza a reutilizar clases y utilizar SASS

--- a/index.html
+++ b/index.html
@@ -76,85 +76,181 @@
     </header>
 
     <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
-    <main class="index-main">
+    <main class="index-main m-0 p-0 ontainer-fluid">
+        <h2 class="nuestrasremeras-index-h2 bg-danger-subtle">Nuestras remeras</h2>
 
-        <h2 class="nuestrasremeras-index-h2 align-items-center'">Nuestras remeras</h2>
+        <div class=" row ultimos-oversize-contenedor"><!-- Contenedor de los productos -->
 
-        <div class="ultimos-oversize-contenedor d-flex col-12 col-md-3 w-100 "><!-- Contenedor de los productos -->
-            
-            <div class="remeraindex ">
-                <div class="productor-remera-img w-100 p-0 "><img src="./img/Negro.jpeg" alt="remeranegra"></div>
+            <!-- PRIMERA CARD -->
+            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded">
+                <div class="remeraindex w-100 h-100">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
+                            alt="remeranegra"></div>
 
-                <div class="productor-remera-descripcion">
-                    <h3 class="mt-2">DRACULA</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
-                        minima
-                        incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                    <p>USD</p>
-                    <button class="btn-remera-index">COMPRAR</button>
+                    <div class="productor-remera-descripcion m-3">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                        <button class="btn-remera-index w-50">COMPRAR</button>
+                    </div>
                 </div>
-
             </div>
 
-            <section class="remeraindex">
-            </section>
+            <!-- SEGUNDA CARD -->
+            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex w-100 h-100">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
+                            alt="remeranegra"></div>
 
-            <section class="remeraindex">
-                <img src="./img/Negro.jpeg" alt="remeranegra">
-                <h3 class="mt-2">DRACULA</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias minima
-                    incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                <p>USD</p>
-                <button class="btn-remera-index">COMPRAR</button>
-            </section>
+                    <div class="productor-remera-descripcion">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
+                            minima
+                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
+                        <p>USD</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
 
-            <section class="remeraindex">
-                <img src="./img/Negro.jpeg" alt="remeranegra">
-                <h3 class="mt-2">DRACULA</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias minima
-                    incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                <p>USD</p>
-                <button class="btn-remera-index">COMPRAR</button>
-            </section>
+            <!-- TERCERA CARD -->
+            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
+                            alt="remeranegra"></div>
 
-            <section class="remeraindex">
-                <img src="./img/Negro.jpeg" alt="remeranegra">
-                <h3 class="mt-2">DRACULA</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias minima
-                    incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                <p>USD</p>
-                <button class="btn-remera-index">COMPRAR</button>
-            </section>
+                    <div class="productor-remera-descripcion">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
+                            minima
+                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
+                        <p>USD</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
 
-            <section class="remeraindex">
-                <img src="./img/TOokyo.jpeg" alt="Remeratokyo">
-                <h3 class="mt-2">DRACULA</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias minima
-                    incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                <p>USD</p>
-                <button class="btn-remera-index">COMPRAR</button>
-            </section>
+                          <!-- CUARTA CARD -->
+            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
+                            alt="remeranegra"></div>
 
-            <section class="remeraindex">
-                <img src="./img/newyork.jpeg" alt="Remeratokyo">
-                <h3 class="mt-2">DRACULA</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias minima
-                    incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                <p>USD</p>
-                <button class="btn-remera-index">COMPRAR</button>
-            </section>
+                    <div class="productor-remera-descripcion">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
+                            minima
+                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
+                        <p>USD</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
 
-        </div>
+             <!-- 5ta CARD -->
+               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
+                            alt="remeranegra"></div>
 
+                    <div class="productor-remera-descripcion">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
+                            minima
+                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
+                        <p>USD</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+             <!-- 6ta CARD -->
+               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
+                            alt="remeranegra"></div>
 
+                    <div class="productor-remera-descripcion">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
+                            minima
+                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
+                        <p>USD</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+             <!-- 7ta CARD -->
+               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
+                            minima
+                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
+                        <p>USD</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+             <!-- 8ta CARD -->
+               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
+                            minima
+                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
+                        <p>USD</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+             <!-- 9ta CARD -->
+               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
+                            minima
+                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
+                        <p>USD</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+             <!-- 10ma CARD -->
+               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
+                            minima
+                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
+                        <p>USD</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
 
     </main>
 
-    <footer class="footerindex text-start pt-3">
+    <footer class="footerindex text-start pt-3 w-100">
 
         <div class="footer-conteiner-grid ps-4">
             <div class="div1">
-                <ul class="footerindex d-flex flex-column align-items-stretch">
+                <ul class="footerindex flex-column align-items-stretch w-100">
                     <li>Ayuda</li>
                     <li>Mi cuenta</li>
                     <li>Store Locator</li>
@@ -168,7 +264,7 @@
             <div class="div4">Gift Card</div>
         </div>
 
-        <div class="footer-redessociales d-flex m-0">
+        <div class="footer-redessociales m-0">
             <div>
                 <div class="d-flex flex-column">
                     <ul class="d-flex">
@@ -181,7 +277,7 @@
                             <li> <a href=""><img src="./img/youtube_social_icon_dark.png" alt=""></a></li>
                             <li> <a href=""> <img src="./img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
-                        <p class="p-footer-derechos m-0 p-2">Todos los derechos reservados </p>
+                        <p class="p-footer-derechos m-0 p-2 w-100">Todos los derechos reservados </p>
                     </div>
 
 
