--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -1,11 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+
+    <title>KAZEOVER</title>
+    <link rel="stylesheet" href="../Estilos/style.css">
 </head>
+
 <body>
-    
+    <header class="index-header">
+        <div class="oscureser-fondo">
+            <div class="index-header-flex">
+                <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0">
+                    <div class="container-fluid ">
+                        <a class="navbar-brand" href="/index.html">KAZEOVER</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+
+                            <div>
+                                <span class="navbar-toggler-icon"></span>
+                            </div>
+                        </button>
+
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./pages/hombre.html">Hombre</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./pages/mujer.html">Mujer</a>
+                                </li>
+                                <ul class="navbar-nav mb-2 mb-lg-0">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./img/nav-icon-busqueda.png"> <i
+                                                class="bi bi-search fs-5"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </ul>
+
+                        </div>
+                    </div>
+                </nav>
+    </header>
+
+
+
+
+
+    <footer class="footerindex text-start pt-3 w-100">
+
+        <div class="footer-conteiner-grid ps-4">
+            <div class="div1">
+                <ul class="footerindex flex-column align-items-stretch w-100">
+                    <li>Ayuda</li>
+                    <li>Mi cuenta</li>
+                    <li>Store Locator</li>
+                </ul>
+            </div>
+
+            <div class="div2">
+
+            </div>
+            <div class="div3">Store Locator </div>
+            <div class="div4">Gift Card</div>
+        </div>
+
+        <div class="footer-redessociales m-0">
+            <div>
+                <div class="d-flex flex-column">
+                    <ul class="d-flex">
+                        <li>Copyright © UNIQLO Co., Ltd. All rights reserved.</li>
+                    </ul>
+                    <div class="d-flex flex-column align-items-center justify-content-center">
+                        <ul class="d-flex  footer-ul flex-row align-items-center justify-content-center">
+                            <li> <a href=""><img src="../img/logo faceboock.png" alt="FACEBOOCK"></a></li>
+                            <li> <a href=""><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
+                            <li> <a href=""><img src="../img/youtube_social_icon_dark.png" alt=""></a></li>
+                            <li> <a href=""> <img src="../img/tiktok.png" alt="Tiktok"></a></li>
+                        </ul>
+                        <p class="p-footer-derechos m-0 p-2 w-100">Todos los derechos reservados </p>
+                    </div>
+
+
+                </div>
+            </div>
+
+        </div>
+
+    </footer>
+
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
