--- a/index.html
+++ b/index.html
@@ -15,237 +15,102 @@
 
 
 <body>
+
     <header class="index-header">
-        <div class="oscureser-fondo">
-            <div class="index-header-flex">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0">
-                    <div class="container-fluid ">
-                        <a class="navbar-brand" href="index.html">KAZEOVER</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
+        <div class="index-header-flex ">
 
-                            <div>
-                                <span class="navbar-toggler-icon"></span>
-                            </div>
-                        </button>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0">
+                <div class="container-fluid ">
+                    <a class="navbar-brand" href="index.html">KAZEOVER</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
 
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./pages/hombre.html">Hombre</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./pages/mujer.html">Mujer</a>
-                                </li>
-                                <ul class="navbar-nav mb-2 mb-lg-0">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="./img/nav-icon-busqueda.png"> <i
-                                                class="bi bi-search fs-5"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </ul>
-
+                        <div>
+                            <span class="navbar-toggler-icon"></span>
                         </div>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/hombre.html">Hombre</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/mujer.html">Mujer</a>
+                            </li>
+                            <ul class="navbar-nav mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./img/nav-icon-busqueda.png"> <i
+                                            class="bi bi-search fs-5"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </ul>
                     </div>
-                </nav>
-
-
-
-
-
-
-            </div>
-
-            <div class="contenedor-inferior-header h-100">
-                <p class="index-parrafoheader">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi tenetur dolores quo natus unde
-                    voluptatibus iste, aspernatur quia, quod deserunt dolor error debitis iure
-                </p>
-                <button class="btn-header">Boton</button>
-            </div>
-
+                </div>
+            </nav>
         </div>
+
+       
+        </div>
+
+
     </header>
 
     <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
-    <main class="index-main m-0 p-0 ontainer-fluid">
-        <h2 class="nuestrasremeras-index-h2 bg-danger-subtle">Nuestras remeras</h2>
 
-        <div class=" row ultimos-oversize-contenedor"><!-- Contenedor de los productos -->
+    <main class="index-main m-0 p-0">
 
-            <!-- PRIMERA CARD -->
-            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded">
-                <div class="remeraindex w-100 h-100">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion m-3">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>OVERSIZE COMODIDA </p>
-                        <p>$30</p>
-                        <button class="btn-remera-index w-50">COMPRAR</button>
+            <div id="carouselExampleIndicators" class="carousel slide>
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner ">
+                    <div class="carousel-item active">
+                        <img src="./img/carrusel1index.jpg" class="carrusel-foto-index" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/carrusel2index.jpg" class="carrusel-foto-index" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/carussel3index.jpg" class="carrusel-foto-index" alt="...">
                     </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
 
-            <!-- SEGUNDA CARD -->
-            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex w-100 h-100">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
-                            alt="remeranegra"></div>
+        <div class=" contenedor-main-carrosel ">
+            <div><img src="./img/carrusel4index.jpg" alt="" class="w-50"></div>
+            <div><img src="./img/carrusel5index.jpg" alt="" class="w-50"></div>
+        
+        </div>
 
-                    <div class="productor-remera-descripcion">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
-                            minima
-                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                        <p>USD</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
+        </main>
 
-            <!-- TERCERA CARD -->
-            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
-                            alt="remeranegra"></div>
 
-                    <div class="productor-remera-descripcion">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
-                            minima
-                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                        <p>USD</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
 
-                          <!-- CUARTA CARD -->
-            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
-                            minima
-                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                        <p>USD</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
-
-             <!-- 5ta CARD -->
-               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
-                            minima
-                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                        <p>USD</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
-             <!-- 6ta CARD -->
-               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
-                            minima
-                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                        <p>USD</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
-             <!-- 7ta CARD -->
-               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
-                            minima
-                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                        <p>USD</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
-             <!-- 8ta CARD -->
-               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
-                            minima
-                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                        <p>USD</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
-             <!-- 9ta CARD -->
-               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
-                            minima
-                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                        <p>USD</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
-             <!-- 10ma CARD -->
-               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="./img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion">
-                        <h3 class="mt-2">DRACULA</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur exercitationem molestias
-                            minima
-                            incidunt reiciendis, voluptatum magni veniam vero ab ex.</p>
-                        <p>USD</p>
-                        <button class="btn-remera-index">COMPRAR</button>
-                    </div>
-                </div>
-            </div>
-
-    </main>
-
+    <!-- FOOTER DE INDEX -->
     <footer class="footerindex text-start pt-3 w-100">
 
         <div class="footer-conteiner-grid ps-4">
