--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="index-header">
+    <header class="hombres-header">
         <div class="oscureser-fondo">
             <div class="index-header-flex">
                 <nav class="navbar navbar-expand-lg bg-body-tertiary w-100 position-fixed top-0">
@@ -57,7 +57,158 @@
                 </nav>
     </header>
 
+ <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
+    <main class="index-main m-0 p-0 ontainer-fluid">
+        <h2 class="nuestrasremeras-index-h2 bg-danger-subtle">Nuestras remeras</h2>
 
+        <div class=" row ultimos-oversize-contenedor"><!-- Contenedor de los productos -->
+
+            <!-- PRIMERA CARD -->
+            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded">
+                <div class="remeraindex w-100">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                        <button class="btn-remera-index w-50">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- SEGUNDA CARD -->
+            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex w-100 h-100">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                           <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- TERCERA CARD -->
+            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+
+                          <!-- CUARTA CARD -->
+            <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+
+             <!-- 5ta CARD -->
+               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                          <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+             <!-- 6ta CARD -->
+               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                          <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+             <!-- 7ta CARD -->
+               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                         <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+             <!-- 8ta CARD -->
+               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                          <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+             <!-- 9ta CARD -->
+               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                          <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+             <!-- 10ma CARD -->
+               <div class="col-6 col-md-3 bg-danger-subtle p-0 rounded ">
+                <div class="remeraindex ">
+                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
+                            alt="remeranegra"></div>
+
+                    <div class="productor-remera-descripcion m-3">
+                        <h3 class="mt-2">DRACULA</h3>
+                        <p>OVERSIZE COMODIDA </p>
+                        <p>$30</p>
+                        <button class="btn-remera-index">COMPRAR</button>
+                    </div>
+                </div>
+            </div>
+
+    </main>
 
 
 
